--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   </head>
   <body>
     <div class="container">
-        <div class="todo-app">
-            <h2>To-Do List <img src="images/icon.png"></h2>
-            <div class="row">
-                <input type="text" id="input-box" placeholder="Add your text">
-                <button onclick="addTask">Add</button>
-            </div>
-            <ul id=" list-container">
-                <!-- <li class="cheaked">Task 1</li>
+      <div class="todo-app">
+        <h2>To-Do List <img src="images/icon.png" /></h2>
+        <div class="row">
+          <input type="text" id="input-box" placeholder="Add your text" />
+          <button id="add-button" onclick="addTask()">Add</button>
+        </div>
+        <ul id="list-Container">
+          <!-- <li class="cheaked">Task 1</li>
                 <li>Task 2</li>
                 <li>Task 3</li> -->
-            </ul>
-        </div>
+        </ul>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
